--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -225,4 +225,19 @@ body::-webkit-scrollbar {
     @apply absolute w-full md:h-dvh h-[50dvh] opacity-100 left-10 top-16 md:left-0 md:top-10 lg:left-[-300px] lg:top-[-100px];
     transform: translate3d(0, 0, 0) rotateX(0) rotateY(0) rotateZ(0) scale(1);
   }
+
+  /* ChizelVerse specific styles */
+  .char {
+    display: inline-block;
+    transform-style: preserve-3d;
+    will-change: transform, opacity;
+  }
+
+  .chizelverse-card {
+    will-change: transform;
+  }
+
+  .card-content {
+    will-change: transform, opacity;
+  }
 }
